--- a/app.wxss
+++ b/app.wxss
@@ -1,6 +1,6 @@
 page {
   font-family: Microsoft YaHei;
-  background-color: #f6f6f6;
+  background-color: #ffffff;
   color: #404040;
   font-size: 14px;
 }
