--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
 <import src="../template/item-template.wxml" />
 
 <view class="search" data-type="txt" catchtap="onSearch">
-  <text class="word">请输入游戏角色</text>
+  <view class="word"><image src="../../images/icon/icon_search.png"></image> 请输入游戏角色</view>
 </view>
 <view class="container">
   <template is="swiper" data="{{swiperList}}"></template>
