--- a/pages/skill/skill-detail/skill-detail.wxss
+++ b/pages/skill/skill-detail/skill-detail.wxss
@@ -44,18 +44,6 @@
   background-color:#0084e0;
 }
 
-.skill-table{
-  line-height: 30px;
-  border-bottom:1px solid #d1d1d1;
-}
-
-.skill-table:last-child{
-  border-bottom: 0;
-}
-
-.skill-table text{
-  width:50%;
-  padding: 0 10px;
-  box-sizing: border-box;
-  display:inline-block;
+.skill-info image{
+  width: 100%;
 }
