--- a/pages/skill/skill.wxss
+++ b/pages/skill/skill.wxss
@@ -16,6 +16,7 @@
   width: 100%;
   height: 200rpx;
   display: flex;
+  justify-content: center;
   align-items: center;
   position: absolute;
   top: 0;
@@ -23,22 +24,30 @@
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.skill-info text {
-  width: 100%;
+.skill-info view {
+  width: 200px;
+  padding: 20rpx 0;
+  border-radius: 5px;
   text-align: center;
   color: #eee;
-  font-size: 26px;
+  font-size: 18px;
   letter-spacing: 4rpx;
+  border: 1px solid #fff;
+}
+
+.skill-info view image {
+  width: 30rpx;
+  height: 23rpx;
 }
 
 .sub-skill-block {
-  font-size:18px;
-  padding:10px 0;
+  font-size: 18px;
+  padding: 10px 0;
   color: #fff;
   text-align: center;
   border-bottom: 1px solid #333;
 }
 
-.sub-skill-block:last-child{
+.sub-skill-block:last-child {
   border-bottom: 0px;
 }
