--- a/pages/template/search-template.wxss
+++ b/pages/template/search-template.wxss
@@ -10,17 +10,24 @@
   width: 100%;
   height: 30px;
   line-height: 30px;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #fff;
   padding: 0 10px;
-  color:#808080;
+  color:#b2b2b2;
+  text-align: center;
+}
+
+.search .word image{
+  width:25rpx;
+  height:25rpx;
+  vertical-align: center;
 }
 
 .search .search-input{
   width: 100%;
-  border-radius: 10px;
+  border-radius: 5px;
   background-color: #fff;
-  padding: 0 10px;
+  padding: 0 5px;
   position: relative;
 }
 
