--- a/pages/skill/skill-list/skill-list.wxss
+++ b/pages/skill/skill-list/skill-list.wxss
@@ -25,36 +25,31 @@
   display: inline-block;
 }
 
-.avatar-tit {
-  margin-bottom: 30rpx;
+.avatar-img image{
+  width:100%;
 }
 
-.avatar-tit image {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+.avatar-tit {
+  padding: 30rpx;
 }
+
 
 .avatar-tit .name {
   width: 100%;
-  position: absolute;
   font-weight: bold;
-  top: 20rpx;
-  left: 20px;
 }
 
 .avatar-tit .info {
-  background: -webkit-gradient(linear, 0 0, 0 50, from(#fff), to(#393939));
-  margin-top: 300rpx;
-  position: relative;
   line-height: 20px;
-  padding: 20rpx;
-  color: #fff;
+  color: #a9a9a9;
 }
 
-.avatar-tit .info .toggle {
-  color: #0084e0;
+.toggle {
+  height: 40px;
+  line-height:40px;
+  text-align: center;
+  color:#0097e0;
+  background-color: #f8f8f8;
 }
 
 .avatar-tit .btn text {
@@ -63,6 +58,7 @@
 }
 
 .avatar-list {
+  padding-top: 30rpx;
   padding-left: 26rpx;
 }
 
