--- a/app.wxss
+++ b/app.wxss
@@ -16,3 +16,9 @@ page {
   background-color: #e5e5e5;
   margin: 40rpx 0;
 }
+
+.line {
+  width: 100%;
+  height: 10px;
+  background-color: #efeff4;
+}
