--- a/pages/template/search-template.wxml
+++ b/pages/template/search-template.wxml
@@ -6,6 +6,6 @@
   bindconfirm="onBindBlur" focus/>
       <view class="close" wx:if="{{isClose}}" catchtap="onClose"><image src="../../images/icon/xx.png"></image></view>
   </view>
-    <text catchtap="onCancel" class="cancelBtn">返回</text>
+    <text catchtap="onCancel" class="cancelBtn">取消</text>
   </view>
 </template>
