--- a/pages/template/search-template.wxss
+++ b/pages/template/search-template.wxss
@@ -6,34 +6,49 @@
   align-items: center;
 }
 
-.search .word{
+.search .word {
   width: 100%;
   height: 30px;
   line-height: 30px;
   border-radius: 5px;
   background-color: #fff;
   padding: 0 10px;
-  color:#b2b2b2;
-  text-align: center;
+  color: #b2b2b2;
+  display: flex;
+  justify-content: center;
 }
 
-.search .word image{
-  width:25rpx;
-  height:25rpx;
-  vertical-align: center;
-}
-
-.search .search-input{
-  width: 100%;
-  border-radius: 5px;
-  background-color: #fff;
-  padding: 0 5px;
+.search .word-input{
   position: relative;
 }
 
-.search .search-input .close{
-  width:30px;
-  height:30px;
+.search .word image {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 8px;
+  left: -18px;
+}
+
+.search .search-input {
+  width: 100%;
+  border-radius: 5px;
+  background-color: #fff;
+  padding: 0 30px;
+  position: relative;
+}
+
+.search .search-input .iconsearch {
+  width: 15px;
+  height: 15px;
+  position: absolute;
+  top: 8px;
+  left: 10px;
+}
+
+.search .search-input .close {
+  width: 30px;
+  height: 30px;
   position: absolute;
   top: 0;
   right: 0;
@@ -43,9 +58,9 @@
   align-items: center;
 }
 
-.search .search-input .close image{
-  width:10px;
-  height:10px;
+.search .search-input .close image {
+  width: 10px;
+  height: 10px;
 }
 
 .search input {
