--- a/pages/template/item-template.wxml
+++ b/pages/template/item-template.wxml
@@ -1,7 +1,7 @@
 <template name="postItem">
-  <image src="{{image}}" mode="widthFix" wx:if="{{image}}"></image>
   <view class="item-info">
-    <text class="title">{{title}}</text>
+    <text class="title"><text class="cate">{{cate}}</text><text class="fontline">|</text>{{title}}</text>
     <text class="time">{{time}}</text>
   </view>
+  <image src="{{image}}" mode="widthFix" wx:if="{{image}}"></image>
 </template>
